--- a/you-kan.Server/package.json
+++ b/you-kan.Server/package.json
@@ -2,9 +2,10 @@
   "name": "you-kan.server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.10.3",
+    "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   }
 }
