--- a/you-kan.Server/package.json
+++ b/you-kan.Server/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "jest": "^29.7.0",
     "mysql2": "^3.10.3",
-    "sequelize": "^6.37.3"
+    "nodemon": "^3.1.4",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.0.0"
   }
 }
