--- a/.gitignore
+++ b/.gitignore
@@ -74,10 +74,14 @@ web_modules/
 
 # dotenv environment variable files
 .env
+.env.test
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
+
+# test db file
+test.sqlite
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
