Imported and applied logo.

--- a/you-kan.UI/ClientApp/angular.json
+++ b/you-kan.UI/ClientApp/angular.json
@@ -24,7 +24,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets",
+              "src/assets/images/youkanlogo.png"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/magenta-violet.css",
