--- a/you-kan.Server/package.json
+++ b/you-kan.Server/package.json
@@ -20,6 +20,8 @@
     "jest": "^29.7.0",
     "mysql2": "^3.10.3",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "supertest": "^7.0.0"
