--- a/you-kan.UI/ClientApp/angular.json
+++ b/you-kan.UI/ClientApp/angular.json
@@ -26,7 +26,8 @@
                 "input": "public"
               },
               "src/assets",
-              "src/assets/images/youkanlogo.png"
+              "src/assets/images/youkanlogo.png",
+              "src/assets/images/favicon.png"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/magenta-violet.css",
